--- a/transformer/etl_raw_to_silver.ipynb
+++ b/transformer/etl_raw_to_silver.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "id": "2790ac96",
    "metadata": {},
    "outputs": [
@@ -348,13 +348,33 @@
     }
    ],
    "source": [
-    "# --- CÉLULA 3 (CORRIGIDA): Carregamento e Análise Inicial ---\n",
+    "# --- CÉLULA 3 (CORRIGIDA V2): Carregamento Blindado ---\n",
     "print(\"Carregando o CSV para o Pandas...\")\n",
     "\n",
     "caminho_csv_completo = os.path.join(pasta_destino_raw, nome_csv)\n",
     "\n",
-    "# index_col=False força o pandas a ler a primeira coluna como DADO, não como índice\n",
-    "df = pd.read_csv(caminho_csv_completo, low_memory=False, index_col=False)\n",
+    "# Lista OFICIAL de colunas (para corrigir o erro de cabeçalho do arquivo)\n",
+    "colunas_corretas = [\n",
+    "    'AppID', 'Name', 'Release date', 'Estimated owners', 'Peak CCU', \n",
+    "    'Required age', 'Price', 'Discount', 'DLC count', 'About the game', \n",
+    "    'Supported languages', 'Full audio languages', 'Reviews', 'Header image', \n",
+    "    'Website', 'Support url', 'Support email', 'Windows', 'Mac', 'Linux', \n",
+    "    'Metacritic score', 'Metacritic url', 'User score', 'Positive', 'Negative', \n",
+    "    'Score rank', 'Achievements', 'Recommendations', 'Notes', \n",
+    "    'Average playtime forever', 'Average playtime two weeks', \n",
+    "    'Median playtime forever', 'Median playtime two weeks', \n",
+    "    'Developers', 'Publishers', 'Categories', 'Genres', 'Tags', \n",
+    "    'Screenshots', 'Movies'\n",
+    "]\n",
+    "\n",
+    "# header=0: Ignora a primeira linha do arquivo (que está bugada)\n",
+    "# names=colunas_corretas: Usa os nossos nomes que estão certos\n",
+    "df = pd.read_csv(\n",
+    "    caminho_csv_completo, \n",
+    "    low_memory=False, \n",
+    "    header=0, \n",
+    "    names=colunas_corretas\n",
+    ")\n",
     "\n",
     "print(f\"Dataset carregado. Linhas: {df.shape[0]}, Colunas: {df.shape[1]}\")\n",
     "df.head(3)"
@@ -433,13 +453,10 @@
     }
    ],
    "source": [
-    "# --- CÉLULA 5: Aplicando a Limpeza ---\n",
+    "# --- CÉLULA 5 (ATUALIZADA): Aplicando a Limpeza ---\n",
     "\n",
     "# 1. Criar uma cópia\n",
     "df_silver = df.copy()\n",
-    "\n",
-    "# Remove espaços em branco dos nomes das colunas\n",
-    "df_silver.columns = df_silver.columns.str.strip()\n",
     "\n",
     "# 2. Remover duplicatas\n",
     "df_silver = df_silver.drop_duplicates(subset=['AppID'], keep='first')\n",
@@ -451,11 +468,10 @@
     "\n",
     "# 4. Aplicar limpeza de Data\n",
     "print(\"Padronizando Datas...\")\n",
-    "# format='mixed' ajuda o pandas a entender datas bagunçadas\n",
     "df_silver['Release date'] = pd.to_datetime(df_silver['Release date'], errors='coerce')\n",
     "\n",
-    "# 5. Renomear colunas\n",
-    "# AQUI ESTAVA O ERRO: Ajustamos para pegar a coluna grudada 'DiscountDLC count'\n",
+    "# 5. Renomear colunas para Snake Case\n",
+    "# Note que agora usamos 'DLC count' direto, pois corrigimos na leitura\n",
     "mapa_colunas = {\n",
     "    'AppID': 'app_id',\n",
     "    'Name': 'name',\n",
@@ -463,7 +479,7 @@
     "    'Estimated owners': 'estimated_owners',\n",
     "    'Peak CCU': 'peak_ccu',\n",
     "    'Price': 'price',\n",
-    "    'DiscountDLC count': 'dlc_count', \n",
+    "    'DLC count': 'dlc_count', \n",
     "    'About the game': 'about_the_game',\n",
     "    'Supported languages': 'supported_languages',\n",
     "    'Full audio languages': 'full_audio_languages',\n",
@@ -493,18 +509,13 @@
     "    'Movies': 'movies'\n",
     "}\n",
     "\n",
-    "# Renomeia\n",
     "df_silver = df_silver.rename(columns=mapa_colunas)\n",
     "\n",
-    "# Selecionar apenas as colunas que mapeamos\n",
+    "# Selecionar colunas finais\n",
     "colunas_finais = list(mapa_colunas.values())\n",
-    "\n",
-    "# Filtra o dataframe final\n",
-    "# Se ainda der erro, o script vai parar aqui, mas agora deve passar\n",
     "df_silver = df_silver[colunas_finais]\n",
     "\n",
-    "print(\"Limpeza concluída! Colunas renomeadas corretamente.\")\n",
-    "print(df_silver.columns.tolist()) # Mostra como ficou"
+    "print(\"Limpeza concluída! Colunas renomeadas corretamente.\")"
    ]
   },
   {
