--- a/transformer/etl_raw_to_silver.ipynb
+++ b/transformer/etl_raw_to_silver.ipynb
@@ -1,8 +1,51 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "00aef6c3",
+   "metadata": {},
+   "source": [
+    "# Job ETL Raw para Silver\n",
+    "Objetivos:\n",
+    "* Extração: extrair da camada Raw `data_layer/raw/games.csv.7z`\n",
+    "* Transformação:\n",
+    "    * limpar os dados\n",
+    "    * realizar a criação de colunas necessárias para a análise na Silver\n",
+    "* Carregamento: carregar dados no postgres da camada Silver"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "91e53eac",
+   "metadata": {},
+   "source": [
+    "## Extração\n",
+    "\n",
+    "* Descompactar arquivo\n",
+    "* Ler CSV corretamente."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "904cbf4e",
+   "metadata": {},
+   "source": [
+    "Importações e Configurações"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
+   "id": "c348d7fa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"oi\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "41184974",
    "metadata": {},
    "outputs": [
@@ -15,11 +58,11 @@
     }
    ],
    "source": [
-    "# --- CÉLULA 1: Imports e Configurações ---\n",
+    "\n",
     "import pandas as pd\n",
     "import py7zr\n",
     "import os\n",
-    "import numpy as np\n",
+    "# import numpy as np\n",
     "\n",
     "# Configuração para visualizar todas as colunas no Jupyter\n",
     "pd.set_option('display.max_columns', None)\n",
@@ -29,12 +72,20 @@
     "pasta_destino_raw = '../data_layer/raw/'\n",
     "nome_csv = 'games.csv' # O nome que está dentro do 7z (verifique se é esse mesmo)\n",
     "\n",
-    "print(\"Bibliotecas importadas.\")"
+    "print(\"Bibliotecas importadas e configurações definidas.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dccaa617",
+   "metadata": {},
+   "source": [
+    "Descompactação"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "id": "d2ea33ec",
    "metadata": {},
    "outputs": [
@@ -48,8 +99,6 @@
     }
    ],
    "source": [
-    "# --- CÉLULA 2: Extração Automática do .7z ---\n",
-    "# Isso garante que quem clonar seu repo consiga rodar sem descompactar manualmente\n",
     "print(f\"Extraindo {caminho_arquivo_7z}...\")\n",
     "\n",
     "if not os.path.exists(os.path.join(pasta_destino_raw, nome_csv)):\n",
@@ -61,6 +110,14 @@
     "        print(f\"Erro ao extrair: {e}\")\n",
     "else:\n",
     "    print(\"O arquivo CSV já foi extraído anteriormente.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "372b7d6f",
+   "metadata": {},
+   "source": [
+    "Leitura pelo Pandas, com correção nas colunas."
    ]
   },
   {
@@ -348,7 +405,6 @@
     }
    ],
    "source": [
-    "# --- CÉLULA 3 (CORRIGIDA V2): Carregamento Blindado ---\n",
     "print(\"Carregando o CSV para o Pandas...\")\n",
     "\n",
     "caminho_csv_completo = os.path.join(pasta_destino_raw, nome_csv)\n",
@@ -751,7 +807,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -765,7 +821,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
