--- a/transformer/etl_raw_to_silver.ipynb
+++ b/transformer/etl_raw_to_silver.ipynb
@@ -36,16 +36,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c348d7fa",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(\"oi\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "41184974",
    "metadata": {},
    "outputs": [
@@ -53,63 +43,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Bibliotecas importadas.\n"
+      "Bibliotecas importadas e configurações definidas.\n"
      ]
     }
    ],
    "source": [
     "\n",
     "import pandas as pd\n",
-    "import py7zr\n",
-    "import os\n",
-    "# import numpy as np\n",
     "\n",
     "# Configuração para visualizar todas as colunas no Jupyter\n",
     "pd.set_option('display.max_columns', None)\n",
     "\n",
-    "# Caminhos dos arquivos (ajustados para sua estrutura de pastas)\n",
-    "caminho_arquivo_7z = '../data_layer/raw/games.csv.7z'\n",
-    "pasta_destino_raw = '../data_layer/raw/'\n",
-    "nome_csv = 'games.csv' # O nome que está dentro do 7z (verifique se é esse mesmo)\n",
+    "caminho_csv_completo = '../data_layer/raw/games.csv'\n",
     "\n",
     "print(\"Bibliotecas importadas e configurações definidas.\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "dccaa617",
-   "metadata": {},
-   "source": [
-    "Descompactação"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d2ea33ec",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Extraindo ../data_layer/raw/games.csv.7z...\n",
-      "O arquivo CSV já foi extraído anteriormente.\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(f\"Extraindo {caminho_arquivo_7z}...\")\n",
-    "\n",
-    "if not os.path.exists(os.path.join(pasta_destino_raw, nome_csv)):\n",
-    "    try:\n",
-    "        with py7zr.SevenZipFile(caminho_arquivo_7z, mode='r') as z:\n",
-    "            z.extractall(path=pasta_destino_raw)\n",
-    "        print(\"Arquivo extraído com sucesso!\")\n",
-    "    except Exception as e:\n",
-    "        print(f\"Erro ao extrair: {e}\")\n",
-    "else:\n",
-    "    print(\"O arquivo CSV já foi extraído anteriormente.\")"
    ]
   },
   {
@@ -117,7 +64,7 @@
    "id": "372b7d6f",
    "metadata": {},
    "source": [
-    "Leitura pelo Pandas, com correção nas colunas."
+    "CSV -> Dataframe Pandas, com correção nas colunas."
    ]
   },
   {
@@ -131,7 +78,7 @@
      "output_type": "stream",
      "text": [
       "Carregando o CSV para o Pandas...\n",
-      "Dataset carregado. Linhas: 122611, Colunas: 39\n"
+      "Dataset carregado. Linhas: 122611, Colunas: 40\n"
      ]
     },
     {
@@ -162,7 +109,8 @@
        "      <th>Peak CCU</th>\n",
        "      <th>Required age</th>\n",
        "      <th>Price</th>\n",
-       "      <th>DiscountDLC count</th>\n",
+       "      <th>Discount</th>\n",
+       "      <th>DLC count</th>\n",
        "      <th>About the game</th>\n",
        "      <th>Supported languages</th>\n",
        "      <th>Full audio languages</th>\n",
@@ -238,6 +186,7 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>https://shared.akamai.steamstatic.com/store_it...</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -280,6 +229,7 @@
        "      <td>Adventure</td>\n",
        "      <td>Adventure,Visual Novel,Anime,Cute</td>\n",
        "      <td>https://shared.akamai.steamstatic.com/store_it...</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -322,6 +272,7 @@
        "      <td>Casual</td>\n",
        "      <td>Casual,Card Game,Solitaire,Puzzle,Hidden Objec...</td>\n",
        "      <td>https://shared.akamai.steamstatic.com/store_it...</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -333,73 +284,73 @@
        "1   496350  Supipara - Chapter 1 Spring Has Come!  Jul 29, 2016   \n",
        "2  1034400      Mystery Solitaire The Black Raven   May 6, 2019   \n",
        "\n",
-       "  Estimated owners  Peak CCU  Required age  Price  DiscountDLC count  \\\n",
-       "0            0 - 0         0             0   0.00                  0   \n",
-       "1        0 - 20000         0             0   5.24                 65   \n",
-       "2        0 - 20000         0             0   4.99                  0   \n",
+       "  Estimated owners  Peak CCU  Required age  Price  Discount  DLC count  \\\n",
+       "0            0 - 0         0             0   0.00         0          0   \n",
+       "1        0 - 20000         0             0   5.24        65          0   \n",
+       "2        0 - 20000         0             0   4.99         0          0   \n",
        "\n",
-       "   About the game                                Supported languages  \\\n",
-       "0               0                                                NaN   \n",
-       "1               0  Springtime, April: when the cherry trees come ...   \n",
-       "2               0  Immerse yourself in the most beloved, mystical...   \n",
+       "                                      About the game  \\\n",
+       "0                                                NaN   \n",
+       "1  Springtime, April: when the cherry trees come ...   \n",
+       "2  Immerse yourself in the most beloved, mystical...   \n",
        "\n",
-       "                         Full audio languages Reviews Header image  \\\n",
-       "0                                          []      []          NaN   \n",
-       "1                                 ['English']      []          NaN   \n",
-       "2  ['English', 'French', 'German', 'Russian']      []          NaN   \n",
+       "                          Supported languages Full audio languages Reviews  \\\n",
+       "0                                          []                   []     NaN   \n",
+       "1                                 ['English']                   []     NaN   \n",
+       "2  ['English', 'French', 'German', 'Russian']                   []     NaN   \n",
        "\n",
-       "                                             Website  \\\n",
+       "                                        Header image  \\\n",
        "0  https://shared.akamai.steamstatic.com/store_it...   \n",
        "1  https://shared.akamai.steamstatic.com/store_it...   \n",
        "2  https://shared.akamai.steamstatic.com/store_it...   \n",
        "\n",
-       "                             Support url  \\\n",
+       "                                 Website  \\\n",
        "0                                    NaN   \n",
        "1         http://mangagamer.org/supipara   \n",
        "2  https://www.facebook.com/8FloorGames/   \n",
        "\n",
-       "                          Support email                 Windows   Mac  Linux  \\\n",
-       "0                                   NaN                     NaN  True  False   \n",
-       "1                 http://mangagamer.com  support@mangagamer.com  True  False   \n",
-       "2  https://www.facebook.com/8FloorGames      support@8floor.net  True   True   \n",
+       "                            Support url           Support email  Windows  \\\n",
+       "0                                   NaN                     NaN     True   \n",
+       "1                 http://mangagamer.com  support@mangagamer.com     True   \n",
+       "2  https://www.facebook.com/8FloorGames      support@8floor.net     True   \n",
        "\n",
-       "   Metacritic score  Metacritic url User score  Positive  Negative  \\\n",
-       "0             False               0        NaN         0         0   \n",
-       "1             False               0        NaN         0       252   \n",
-       "2             False               0        NaN         0        21   \n",
+       "     Mac  Linux  Metacritic score Metacritic url  User score  Positive  \\\n",
+       "0  False  False                 0            NaN           0         0   \n",
+       "1  False  False                 0            NaN           0       252   \n",
+       "2   True  False                 0            NaN           0        21   \n",
        "\n",
-       "   Score rank  Achievements  Recommendations  Notes Average playtime forever  \\\n",
-       "0           0           NaN                0      0                      NaN   \n",
-       "1           3           NaN                0    231                      NaN   \n",
-       "2           3           NaN                0      0                      NaN   \n",
+       "   Negative  Score rank  Achievements  Recommendations Notes  \\\n",
+       "0         0         NaN             0                0   NaN   \n",
+       "1         3         NaN             0              231   NaN   \n",
+       "2         3         NaN             0                0   NaN   \n",
        "\n",
-       "   Average playtime two weeks  Median playtime forever  \\\n",
-       "0                           0                        0   \n",
-       "1                           8                        0   \n",
-       "2                           0                        0   \n",
+       "   Average playtime forever  Average playtime two weeks  \\\n",
+       "0                         0                           0   \n",
+       "1                         8                           0   \n",
+       "2                         0                           0   \n",
        "\n",
-       "   Median playtime two weeks  Developers   Publishers  Categories  \\\n",
-       "0                          0           0          NaN         NaN   \n",
-       "1                          8           0       minori  MangaGamer   \n",
-       "2                          0           0  Somer Games      8floor   \n",
+       "   Median playtime forever  Median playtime two weeks   Developers  \\\n",
+       "0                        0                          0          NaN   \n",
+       "1                        8                          0       minori   \n",
+       "2                        0                          0  Somer Games   \n",
        "\n",
-       "                                              Genres       Tags  \\\n",
-       "0                                                NaN        NaN   \n",
-       "1  Single-player,Steam Trading Cards,Steam Cloud,...  Adventure   \n",
-       "2                       Single-player,Family Sharing     Casual   \n",
+       "   Publishers                                         Categories     Genres  \\\n",
+       "0         NaN                                                NaN        NaN   \n",
+       "1  MangaGamer  Single-player,Steam Trading Cards,Steam Cloud,...  Adventure   \n",
+       "2      8floor                       Single-player,Family Sharing     Casual   \n",
        "\n",
-       "                                         Screenshots  \\\n",
+       "                                                Tags  \\\n",
        "0                                                NaN   \n",
        "1                  Adventure,Visual Novel,Anime,Cute   \n",
        "2  Casual,Card Game,Solitaire,Puzzle,Hidden Objec...   \n",
        "\n",
-       "                                              Movies  \n",
-       "0  https://shared.akamai.steamstatic.com/store_it...  \n",
-       "1  https://shared.akamai.steamstatic.com/store_it...  \n",
-       "2  https://shared.akamai.steamstatic.com/store_it...  "
+       "                                         Screenshots  Movies  \n",
+       "0  https://shared.akamai.steamstatic.com/store_it...     NaN  \n",
+       "1  https://shared.akamai.steamstatic.com/store_it...     NaN  \n",
+       "2  https://shared.akamai.steamstatic.com/store_it...     NaN  "
       ]
      },
-     "execution_count": 43,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -407,9 +358,6 @@
    "source": [
     "print(\"Carregando o CSV para o Pandas...\")\n",
     "\n",
-    "caminho_csv_completo = os.path.join(pasta_destino_raw, nome_csv)\n",
-    "\n",
-    "# Lista OFICIAL de colunas (para corrigir o erro de cabeçalho do arquivo)\n",
     "colunas_corretas = [\n",
     "    'AppID', 'Name', 'Release date', 'Estimated owners', 'Peak CCU', \n",
     "    'Required age', 'Price', 'Discount', 'DLC count', 'About the game', \n",
@@ -423,8 +371,6 @@
     "    'Screenshots', 'Movies'\n",
     "]\n",
     "\n",
-    "# header=0: Ignora a primeira linha do arquivo (que está bugada)\n",
-    "# names=colunas_corretas: Usa os nossos nomes que estão certos\n",
     "df = pd.read_csv(\n",
     "    caminho_csv_completo, \n",
     "    low_memory=False, \n",
@@ -437,8 +383,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "37e7f427",
+   "metadata": {},
+   "source": [
+    "Funções de Limpeza"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "id": "c3dc4492",
    "metadata": {},
    "outputs": [
@@ -451,8 +405,6 @@
     }
    ],
    "source": [
-    "# --- CÉLULA 4: Funções de Limpeza (A mágica acontece aqui) ---\n",
-    "\n",
     "def tratar_preco(valor):\n",
     "    \"\"\"\n",
     "    O dataset tem preços como 'Free', 'Free to Play', ou números.\n",
