--- a/transformer/etl_raw_to_silver.ipynb
+++ b/transformer/etl_raw_to_silver.ipynb
@@ -481,40 +481,18 @@
     "# 5. Renomear colunas para Snake Case\n",
     "# Note que agora usamos 'DLC count' direto, pois corrigimos na leitura\n",
     "mapa_colunas = {\n",
-    "    'AppID': 'app_id',\n",
-    "    'Name': 'name',\n",
-    "    'Release date': 'release_date',\n",
-    "    'Estimated owners': 'estimated_owners',\n",
-    "    'Peak CCU': 'peak_ccu',\n",
-    "    'Price': 'price',\n",
-    "    'DLC count': 'dlc_count', \n",
-    "    'About the game': 'about_the_game',\n",
-    "    'Supported languages': 'supported_languages',\n",
+    "    'AppID': 'id',\n",
+    "    'Name': 'nome',\n",
+    "    'Release date': 'data_de_lancamento',\n",
+    "    'Price': 'preco',\n",
+    "    'Supported languages': 'idiomas_suportados',\n",
     "    'Full audio languages': 'full_audio_languages',\n",
-    "    'Header image': 'header_image',\n",
-    "    'Website': 'website',\n",
-    "    'Support url': 'support_url',\n",
-    "    'Support email': 'support_email',\n",
-    "    'Windows': 'windows',\n",
-    "    'Mac': 'mac',\n",
-    "    'Linux': 'linux',\n",
-    "    'Metacritic score': 'metacritic_score',\n",
-    "    'User score': 'user_score',\n",
-    "    'Positive': 'positive_ratings',\n",
-    "    'Negative': 'negative_ratings',\n",
-    "    'Achievements': 'achievements',\n",
-    "    'Recommendations': 'recommendations',\n",
-    "    'Average playtime forever': 'average_playtime_forever',\n",
-    "    'Average playtime two weeks': 'average_playtime_two_weeks',\n",
-    "    'Median playtime forever': 'median_playtime_forever',\n",
-    "    'Median playtime two weeks': 'median_playtime_two_weeks',\n",
-    "    'Developers': 'developers',\n",
-    "    'Publishers': 'publishers',\n",
-    "    'Categories': 'categories',\n",
-    "    'Genres': 'genres',\n",
-    "    'Tags': 'tags',\n",
-    "    'Screenshots': 'screenshots',\n",
-    "    'Movies': 'movies'\n",
+    "    'Metacritic score': 'nota_de_metacritic',\n",
+    "    'User score': 'nota_de_usuario',\n",
+    "    'Positive': 'avaliacoes_positivas',\n",
+    "    'Negative': 'avaliacoes_negativas',\n",
+    "    'Categories': 'categorias',\n",
+    "    'Genres': 'generos',\n",
     "}\n",
     "\n",
     "df_silver = df_silver.rename(columns=mapa_colunas)\n",
@@ -759,7 +737,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -773,7 +751,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
