Markdown de conclusão e próximos passos

--- a/data_layer/raw/analytics.ipynb
+++ b/data_layer/raw/analytics.ipynb
@@ -1197,6 +1197,24 @@
     "plt.tight_layout()\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2240057b",
+   "metadata": {},
+   "source": [
+    "# Conclusão e Próximos Passos (Pipeline)\n",
+    "\n",
+    "Esta Análise Exploratória (EDA) na camada **Raw** nos permitiu entender a natureza dos dados e definir as regras de negócio para a limpeza.\n",
+    "\n",
+    "**Principais Descobertas que guiarão o ETL (Raw -> Silver):**\n",
+    "1.  **Preços:** O campo vem como texto (ex: \"Free to Play\"). No ETL, criaremos uma função para padronizar tudo para numérico ($0.00).\n",
+    "2.  **Datas:** Existem formatos variados. Precisaremos converter para `datetime` padrão do banco SQL.\n",
+    "3.  **Colunas Complexas:** Gêneros e Categorias vêm agrupados por vírgula. Na camada Silver, manteremos assim, mas para o Dashboard (Gold) poderemos explodir essas colunas para filtros dinâmicos.\n",
+    "4.  **Qualidade:** Identificamos que preço não define qualidade, então manteremos ambas as métricas (Preço e Nota) para cruzamentos futuros.\n",
+    "\n",
+    "**Próxima Etapa:** Executar o script de ETL para limpar esses dados e carregá-los na tabela `tb_games_silver` no PostgreSQL."
+   ]
   }
  ],
  "metadata": {
