feat(etl): add business logic for price tiers, release year and localization

--- a/transformer/etl_raw_to_silver.ipynb
+++ b/transformer/etl_raw_to_silver.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 1,
    "id": "41184974",
    "metadata": {},
    "outputs": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 2,
    "id": "2790ac96",
    "metadata": {},
    "outputs": [
@@ -354,7 +354,7 @@
        "2  https://shared.akamai.steamstatic.com/store_it...     NaN  "
       ]
      },
-     "execution_count": 43,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 3,
    "id": "c3dc4492",
    "metadata": {},
    "outputs": [
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 4,
    "id": "35797c32",
    "metadata": {},
    "outputs": [
@@ -464,46 +464,28 @@
      "output_type": "stream",
      "text": [
       "iniciando transformação e limpeza...\n",
-      "Linhas válidas após remoção de duplicatas e sem nome: 122610\n",
-      "Transformação e Limpeza Completa concluída.\n",
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "Index: 122610 entries, 0 to 122610\n",
-      "Data columns (total 20 columns):\n",
-      " #   Column                Non-Null Count   Dtype         \n",
-      "---  ------                --------------   -----         \n",
-      " 0   app_id                122610 non-null  int64         \n",
-      " 1   name                  122610 non-null  object        \n",
-      " 2   release_date          122610 non-null  datetime64[ns]\n",
-      " 3   price                 122610 non-null  float64       \n",
-      " 4   required_age          122610 non-null  int64         \n",
-      " 5   dlc_count             122610 non-null  int64         \n",
-      " 6   metacritic_score      122610 non-null  int64         \n",
-      " 7   user_score            122610 non-null  int64         \n",
-      " 8   positive_reviews      122610 non-null  int64         \n",
-      " 9   negative_reviews      122610 non-null  int64         \n",
-      " 10  achievements          122610 non-null  int64         \n",
-      " 11  recommendations       122610 non-null  int64         \n",
-      " 12  avg_playtime          122610 non-null  int64         \n",
-      " 13  developers            122610 non-null  object        \n",
-      " 14  publishers            122610 non-null  object        \n",
-      " 15  categories            122610 non-null  object        \n",
-      " 16  genres                122610 non-null  object        \n",
-      " 17  tags                  122610 non-null  object        \n",
-      " 18  supported_languages   122610 non-null  object        \n",
-      " 19  full_audio_languages  122610 non-null  object        \n",
-      "dtypes: datetime64[ns](1), float64(1), int64(10), object(8)\n",
-      "memory usage: 19.6+ MB\n",
-      "None\n"
+      "Linhas válidas após remoção de duplicatas e sem nome: 122610\n"
      ]
     }
    ],
    "source": [
+    "def classificar_tier_mercado(valor):\n",
+    "    if valor == 0:\n",
+    "        return 'Gratuito'\n",
+    "    elif valor < 10:\n",
+    "        return 'Budget (<$10)'\n",
+    "    elif valor < 30:\n",
+    "        return 'Indie / Padrão ($10-$29)'\n",
+    "    elif valor < 59: \n",
+    "        return 'Double-A / Premium ($30-$58)'\n",
+    "    else:\n",
+    "        return 'AAA / Lançamento (+$59)'\n",
+    "\n",
     "print(\"iniciando transformação e limpeza...\")\n",
     "\n",
     "df_silver = df.copy()\n",
     "\n",
     "df_silver = df_silver.drop_duplicates(subset=['AppID'], keep='first')\n",
-    "\n",
     "df_silver = df_silver.dropna(subset=['Name'])\n",
     "\n",
     "print(f\"Linhas válidas após remoção de duplicatas e sem nome: {df_silver.shape[0]}\")\n",
@@ -511,12 +493,18 @@
     "df_silver['price_clean'] = df_silver['Price'].apply(limpar_preco)\n",
     "df_silver['date_clean'] = pd.to_datetime(df_silver['Release date'], errors='coerce')\n",
     "\n",
+    "df_silver['release_year'] = df_silver['date_clean'].dt.year.fillna(0).astype(int)\n",
+    "\n",
+    "df_silver['price_tier'] = df_silver['price_clean'].apply(classificar_tier_mercado)\n",
+    "\n",
+    "df_silver['has_ptbr_interface'] = df_silver['Supported languages'].fillna('').astype(str).str.contains('Portuguese - Brazil', case=False, regex=False)\n",
+    "df_silver['has_ptbr_audio'] = df_silver['Full audio languages'].fillna('').astype(str).str.contains('Portuguese - Brazil', case=False, regex=False)\n",
+    "\n",
     "colunas_inteiras_originais = [\n",
     "    'Required age', 'DLC count', 'Metacritic score', 'User score', \n",
     "    'Positive', 'Negative', 'Achievements', 'Recommendations', \n",
     "    'Average playtime forever'\n",
     "]\n",
-    "\n",
     "for col in colunas_inteiras_originais:\n",
     "    df_silver[col] = df_silver[col].fillna(0).astype(int)\n",
     "\n",
@@ -524,24 +512,20 @@
     "    'Developers', 'Publishers', 'Categories', 'Genres', 'Tags', \n",
     "    'Supported languages', 'Full audio languages'\n",
     "]\n",
-    "\n",
     "df_silver[colunas_texto_originais] = df_silver[colunas_texto_originais].fillna('Unknown')\n",
     "\n",
     "cols_map = {\n",
     "    'AppID': 'app_id',\n",
     "    'Name': 'name',\n",
-    "    'date_clean': 'release_date',       \n",
-    "    'price_clean': 'price',             \n",
-    "    'Required age': 'required_age',     \n",
-    "    'DLC count': 'dlc_count',           \n",
+    "    'date_clean': 'release_date',\n",
+    "    'release_year': 'release_year',\n",
+    "    'price_clean': 'price',\n",
+    "    'price_tier': 'price_tier',   \n",
+    "    'has_ptbr_interface': 'has_ptbr_interface', \n",
+    "    'has_ptbr_audio': 'has_ptbr_audio',    \n",
+    "    'Required age': 'required_age',\n",
     "    'Metacritic score': 'metacritic_score',\n",
     "    'User score': 'user_score',\n",
-    "    'Positive': 'positive_reviews',\n",
-    "    'Negative': 'negative_reviews',\n",
-    "    'Achievements': 'achievements',\n",
-    "    'Recommendations': 'recommendations',\n",
-    "    'Average playtime forever': 'avg_playtime',\n",
-    "    'Developers': 'developers',\n",
     "    'Publishers': 'publishers',\n",
     "    'Categories': 'categories',\n",
     "    'Genres': 'genres',\n",
@@ -553,10 +537,7 @@
     "df_silver = df_silver.rename(columns=cols_map)\n",
     "\n",
     "colunas_finais = list(cols_map.values())\n",
-    "df_silver = df_silver[colunas_finais]\n",
-    "\n",
-    "print(\"Transformação e Limpeza Completa concluída.\")\n",
-    "print(df_silver.info())"
+    "df_silver = df_silver[colunas_finais]"
    ]
   },
   {
@@ -573,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 5,
    "id": "d26adaf4",
    "metadata": {},
    "outputs": [
@@ -583,31 +564,28 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "Index: 122610 entries, 0 to 122610\n",
-      "Data columns (total 20 columns):\n",
+      "Data columns (total 17 columns):\n",
       " #   Column                Non-Null Count   Dtype         \n",
       "---  ------                --------------   -----         \n",
       " 0   app_id                122610 non-null  int64         \n",
       " 1   name                  122610 non-null  object        \n",
       " 2   release_date          122610 non-null  datetime64[ns]\n",
-      " 3   price                 122610 non-null  float64       \n",
-      " 4   required_age          122610 non-null  int64         \n",
-      " 5   dlc_count             122610 non-null  int64         \n",
-      " 6   metacritic_score      122610 non-null  int64         \n",
-      " 7   user_score            122610 non-null  int64         \n",
-      " 8   positive_reviews      122610 non-null  int64         \n",
-      " 9   negative_reviews      122610 non-null  int64         \n",
-      " 10  achievements          122610 non-null  int64         \n",
-      " 11  recommendations       122610 non-null  int64         \n",
-      " 12  avg_playtime          122610 non-null  int64         \n",
-      " 13  developers            122610 non-null  object        \n",
-      " 14  publishers            122610 non-null  object        \n",
-      " 15  categories            122610 non-null  object        \n",
-      " 16  genres                122610 non-null  object        \n",
-      " 17  tags                  122610 non-null  object        \n",
-      " 18  supported_languages   122610 non-null  object        \n",
-      " 19  full_audio_languages  122610 non-null  object        \n",
-      "dtypes: datetime64[ns](1), float64(1), int64(10), object(8)\n",
-      "memory usage: 19.6+ MB\n",
+      " 3   release_year          122610 non-null  int64         \n",
+      " 4   price                 122610 non-null  float64       \n",
+      " 5   price_tier            122610 non-null  object        \n",
+      " 6   has_ptbr_interface    122610 non-null  bool          \n",
+      " 7   has_ptbr_audio        122610 non-null  bool          \n",
+      " 8   required_age          122610 non-null  int64         \n",
+      " 9   metacritic_score      122610 non-null  int64         \n",
+      " 10  user_score            122610 non-null  int64         \n",
+      " 11  publishers            122610 non-null  object        \n",
+      " 12  categories            122610 non-null  object        \n",
+      " 13  genres                122610 non-null  object        \n",
+      " 14  tags                  122610 non-null  object        \n",
+      " 15  supported_languages   122610 non-null  object        \n",
+      " 16  full_audio_languages  122610 non-null  object        \n",
+      "dtypes: bool(2), datetime64[ns](1), float64(1), int64(5), object(8)\n",
+      "memory usage: 15.2+ MB\n",
       "None\n",
       "               price  metacritic_score\n",
       "count  122610.000000     122610.000000\n",
@@ -640,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 6,
    "id": "bf3d876a",
    "metadata": {},
    "outputs": [
@@ -688,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 7,
    "id": "e3a90e79",
    "metadata": {},
    "outputs": [
