--- a/transformer/etl_raw_to_silver.ipynb
+++ b/transformer/etl_raw_to_silver.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "id": "41184974",
    "metadata": {},
    "outputs": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "id": "2790ac96",
    "metadata": {},
    "outputs": [
@@ -350,7 +350,7 @@
        "2  https://shared.akamai.steamstatic.com/store_it...     NaN  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "id": "35797c32",
    "metadata": {},
    "outputs": [
@@ -414,27 +414,26 @@
       "iniciando transformação e limpeza...\n",
       "<class 'pandas.core.frame.DataFrame'>\n",
       "Index: 122610 entries, 0 to 122610\n",
-      "Data columns (total 16 columns):\n",
+      "Data columns (total 15 columns):\n",
       " #   Column              Non-Null Count   Dtype  \n",
       "---  ------              --------------   -----  \n",
       " 0   id_jogo             122610 non-null  int64  \n",
       " 1   nome_jogo           122610 non-null  object \n",
-      " 2   data_lancamento     122610 non-null  object \n",
-      " 3   idade_minima        122610 non-null  int64  \n",
-      " 4   preco               122610 non-null  float64\n",
-      " 5   nota_metacritic     122610 non-null  int64  \n",
-      " 6   nota_usuario        122610 non-null  int64  \n",
-      " 7   desenvolvedores     122610 non-null  object \n",
-      " 8   publicadoras        122610 non-null  object \n",
-      " 9   categorias          122610 non-null  object \n",
-      " 10  generos             122610 non-null  object \n",
-      " 11  tags                122610 non-null  object \n",
-      " 12  ano_lancamento      122610 non-null  int32  \n",
-      " 13  tier_preco          122610 non-null  object \n",
-      " 14  tem_ptbr_interface  122610 non-null  bool   \n",
-      " 15  tem_ptbr_audio      122610 non-null  bool   \n",
-      "dtypes: bool(2), float64(1), int32(1), int64(4), object(8)\n",
-      "memory usage: 13.8+ MB\n",
+      " 2   idade_minima        122610 non-null  int64  \n",
+      " 3   preco               122610 non-null  float64\n",
+      " 4   nota_metacritic     122610 non-null  int64  \n",
+      " 5   nota_usuario        122610 non-null  int64  \n",
+      " 6   desenvolvedores     122610 non-null  object \n",
+      " 7   publicadoras        122610 non-null  object \n",
+      " 8   categorias          122610 non-null  object \n",
+      " 9   generos             122610 non-null  object \n",
+      " 10  tags                122610 non-null  object \n",
+      " 11  ano_lancamento      122610 non-null  int32  \n",
+      " 12  tier_preco          122610 non-null  object \n",
+      " 13  tem_ptbr_interface  122610 non-null  bool   \n",
+      " 14  tem_ptbr_audio      122610 non-null  bool   \n",
+      "dtypes: bool(2), float64(1), int32(1), int64(4), object(7)\n",
+      "memory usage: 12.9+ MB\n",
       "None\n"
      ]
     }
@@ -527,7 +526,7 @@
     "df['tem_ptbr_audio'] = df['idiomas_audio_suportados'].astype(str).str.contains('Portuguese - Brazil', case=False, regex=False)\n",
     "\n",
     "# Remoção de colunas que não vão para a silver\n",
-    "df = df.drop(columns=[\"qtde_donos\", \"pico_usuarios\", 'preco_desconto', 'qtde_dlcs', 'descricao', 'idiomas_suportados', 'idiomas_audio_suportados', 'url_imagem_capa', 'email_suporte', 'windows', 'mac', 'linux', 'avaliacoes_positivas', 'avaliacoes_negativas', 'qtde_conquistas', 'recomendacoes', 'media_tempo_de_jogo_desde_sempre', 'media_tempo_de_jogo_desde_duas_semanas', 'mediana_tempo_de_jogo_desde_sempre', 'mediana_tempo_de_jogo_desde_duas_semanas', 'urls_screenshot'])\n",
+    "df = df.drop(columns=[\"qtde_donos\", \"pico_usuarios\", 'data_lancamento', 'preco_desconto', 'qtde_dlcs', 'descricao', 'idiomas_suportados', 'idiomas_audio_suportados', 'url_imagem_capa', 'email_suporte', 'windows', 'mac', 'linux', 'avaliacoes_positivas', 'avaliacoes_negativas', 'qtde_conquistas', 'recomendacoes', 'media_tempo_de_jogo_desde_sempre', 'media_tempo_de_jogo_desde_duas_semanas', 'mediana_tempo_de_jogo_desde_sempre', 'mediana_tempo_de_jogo_desde_duas_semanas', 'urls_screenshot'])\n",
     "\n",
     "print(df.info())"
    ]
