ETL silver to gold: retirada de funções redundantes de limpeza

--- a/transformer/etl_silver_to_gold.ipynb
+++ b/transformer/etl_silver_to_gold.ipynb
@@ -22,8 +22,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "41b640fe",
+   "metadata": {},
+   "source": [
+    "## Importações e Configurações\n",
+    "Setup inicial com bibliotecas necessárias e configurações do Pandas para melhor visualização.\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "19096e2f",
    "metadata": {},
    "outputs": [
@@ -49,16 +58,22 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41b640fe",
+   "id": "dd079e2e",
    "metadata": {},
    "source": [
-    "## Importações e Configurações\n",
-    "Setup inicial com bibliotecas necessárias e configurações do Pandas para melhor visualização.\n"
+    "## 1. Extração (Extract)\n",
+    "\n",
+    "Carregamento dos dados da camada Silver do PostgreSQL.\n",
+    "\n",
+    "**Conexão PostgreSQL:**\n",
+    "- Conecta ao banco de dados `steam_bi` usando as credenciais `steam_bi_user`\n",
+    "- Lê a tabela `tb_games_silver` com todos os registros disponíveis\n",
+    "- A conexão é obrigatória para prosseguir com o pipeline"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "0739ba90",
    "metadata": {},
    "outputs": [
@@ -66,12 +81,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Reconectando ao banco de dados PostgreSQL...\n",
+      "Conectando ao banco de dados PostgreSQL...\n",
       "\n",
       "✓ Conexão estabelecida com sucesso!\n",
       "\n",
       "Extraindo dados da camada Silver...\n",
-      "✓ 122610 registros carregados do PostgreSQL.\n"
+      "✓ 122610 registros carregados do PostgreSQL.\n",
+      "✓ Colunas: ['id_jogo', 'nome_jogo', 'idade_minima', 'preco', 'nota_metacritic', 'nota_usuario', 'desenvolvedores', 'publicadoras', 'categorias', 'generos', 'tags', 'ano_lancamento', 'tier_preco', 'tem_ptbr_interface', 'tem_ptbr_audio']\n"
      ]
     }
    ],
@@ -97,21 +113,6 @@
     "df_silver = pd.read_sql(\"SELECT * FROM tb_games_silver\", engine)\n",
     "print(f\"✓ {len(df_silver)} registros carregados do PostgreSQL.\")\n",
     "print(f\"✓ Colunas: {list(df_silver.columns)}\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7a846a41",
-   "metadata": {},
-   "source": [
-    "## 1. Extração (Extract)\n",
-    "\n",
-    "Carregamento dos dados da camada Silver do PostgreSQL.\n",
-    "\n",
-    "**Conexão PostgreSQL:**\n",
-    "- Conecta ao banco de dados `steam_bi` usando as credenciais `steam_bi_user`\n",
-    "- Lê a tabela `tb_games_silver` com todos os registros disponíveis\n",
-    "- A conexão é obrigatória para prosseguir com o pipeline"
    ]
   },
   {
@@ -162,7 +163,7 @@
    "outputs": [],
    "source": [
     "# Função para criar dimensões baseadas em listas (ex: Gêneros, Tags)\n",
-    "def create_text_dimension(df, col_origem, nome_tabela, col_id, col_nome):\n",
+    "def create_text_dimension(df, cols_origem: list, nome_tabela, col_id, col_nome):\n",
     "    \"\"\"\n",
     "    Converte uma coluna com valores multivalorados separados por vírgula em uma dimensão normalizada.\n",
     "    \n",
@@ -172,7 +173,7 @@
     "    \n",
     "    Parâmetros:\n",
     "        df: DataFrame com os dados brutos\n",
-    "        col_origem: Coluna para explodir (ex: 'generos')\n",
+    "        cols_origem: Nomes das colunas de origem (Ex: ['preco', 'tier preco'])\n",
     "        nome_tabela: Nome da tabela (para logging)\n",
     "        col_id: Nome da coluna ID a criar (ex: 'SRK_GEN')\n",
     "        col_nome: Nome da coluna descritiva (ex: 'NME_GEN')\n",
@@ -182,58 +183,22 @@
     "    \"\"\"\n",
     "    print(f\"Criando {nome_tabela}...\")\n",
     "    \n",
-    "    # PASSO 1: Seleciona apenas a coluna de origem e remove NAs\n",
-    "    temp = df[[col_origem]].dropna().copy()\n",
+    "    # PASSO 1: Seleciona apenas a coluna de origem\n",
+    "    dim = df[col_origem].copy()\n",
     "    \n",
-    "    # PASSO 2: Divide os valores por vírgula (string → lista)\n",
-    "    # Ex: \"Indie, Ação\" → [\"Indie\", \"Ação\"]\n",
-    "    temp[col_origem] = temp[col_origem].astype(str).str.split(',')\n",
-    "    \n",
-    "    # PASSO 3: Explode (multiplica as linhas)\n",
-    "    # 1 linha com [\"Indie\", \"Ação\"] → 2 linhas, uma com \"Indie\", outra com \"Ação\"\n",
-    "    temp = temp.explode(col_origem)\n",
-    "    \n",
-    "    # PASSO 4: Remove espaços em branco extras\n",
-    "    # Ex: \" Indie\" → \"Indie\"\n",
-    "    temp[col_origem] = temp[col_origem].str.strip()\n",
-    "    \n",
-    "    # PASSO 5: Remove duplicatas e ordena alfabeticamente\n",
-    "    dim = temp.drop_duplicates(subset=[col_origem]).sort_values(col_origem)\n",
-    "    \n",
-    "    # PASSO 6: Remove valores vazios\n",
-    "    dim = dim[dim[col_origem] != '']\n",
-    "    \n",
-    "    # PASSO 7: Reseta índice e cria ID sequencial\n",
+    "    # PASSO 2: Reseta índice e cria ID sequencial\n",
     "    dim = dim.reset_index(drop=True)\n",
     "    dim[col_id] = dim.index + 1  # Surrogate Key: 1, 2, 3, ...\n",
     "    \n",
-    "    # PASSO 8: Renomeia coluna de origem para o padrão mnemônico\n",
+    "    # PASSO 3: Renomeia coluna de origem para o padrão mnemônico\n",
     "    dim = dim.rename(columns={col_origem: col_nome})\n",
     "    \n",
-    "    # PASSO 9: Retorna apenas as 2 colunas relevantes\n",
-    "    return dim[[col_id, col_nome]]"
+    "    return dim"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "274f9590",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Função auxiliar para explodir e fazer merge (usada em versões alternativas)\n",
-    "def explode_and_merge(df_fato, col_origem_lista, df_dim, col_dim_nome, col_dim_id):\n",
-    "    df_fato = df_fato.copy()\n",
-    "    df_fato[col_origem_lista] = df_fato[col_origem_lista].astype(str).str.split(',')\n",
-    "    df_fato = df_fato.explode(col_origem_lista)\n",
-    "    df_fato[col_origem_lista] = df_fato[col_origem_lista].str.strip()\n",
-    "    df_fato = df_fato.merge(df_dim, left_on=col_origem_lista, right_on=col_dim_nome, how='left')\n",
-    "    return df_fato\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "5dc247fb",
    "metadata": {},
    "outputs": [],
@@ -266,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "918357b3",
    "metadata": {},
    "outputs": [],
@@ -460,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "8594ce97",
    "metadata": {},
    "outputs": [
@@ -473,34 +438,19 @@
       "\n",
       "Iniciando transformação para o novo modelo Gold (Mnemônicos)...\n",
       "\n",
+      "──────────────────────────────────────────────────────────────────────\n",
+      "FASE 1: CRIAÇÃO DE DIMENSÕES\n",
+      "──────────────────────────────────────────────────────────────────────\n",
+      "\n",
       "Criando DIM_OFR...\n",
+      "  └─ 941 ofertas únicas\n",
+      "\n",
+      "Criando dimensões de texto (com explode)...\n",
       "Criando DIM_DEV...\n",
-      "Criando DIM_PBS...\n",
-      "Criando DIM_CAT...\n",
-      "Criando DIM_GEN...\n",
-      "Criando DIM_TAG...\n",
-      "Construindo FAT_JGO (Isso pode demorar dependendo do volume)...\n",
+      "⚠ Erro durante o processamento: \"None of [Index(['desenvolvedoras'], dtype='object')] are in the [columns]\"\n",
       "\n",
-      "\n",
-      "--- Resumo da Transformação ---\n",
-      "DIM_OFR: 941 linhas\n",
-      "DIM_DEV: 75469 linhas\n",
-      "DIM_PBS: 62672 linhas\n",
-      "DIM_CAT: 58 linhas\n",
-      "DIM_GEN: 33 linhas\n",
-      "DIM_TAG: 452 linhas\n",
-      "FAT_JGO: 122610 linhas\n",
-      "\n",
-      "--- Salvando no PostgreSQL ---\n",
-      "Salvando DIM_OFR... ✓ (941 registros)\n",
-      "Salvando DIM_DEV... ✓ (75469 registros)\n",
-      "Salvando DIM_PBS... ✓ (62672 registros)\n",
-      "Salvando DIM_CAT... ✓ (58 registros)\n",
-      "Salvando DIM_GEN... ✓ (33 registros)\n",
-      "Salvando DIM_TAG... ✓ (452 registros)\n",
-      "Salvando FAT_JGO... ✓ (122610 registros)\n",
-      "\n",
-      "✓ Processo Gold concluído com sucesso!\n"
+      "ℹ Se o banco estiver indisponível, os dados foram modelados em memória.\n",
+      "Execute novamente quando o PostgreSQL estiver acessível para salvar.\n"
      ]
     }
    ],
@@ -544,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "688f4411",
    "metadata": {},
    "outputs": [
@@ -556,23 +506,12 @@
       "=== ETAPA 4: VALIDAÇÃO PÓS-CARGA ===\n",
       "\n",
       "--- Contagem de Registros por Tabela ---\n",
-      "Ofertas              (DIM_OFR):      941 registros\n",
-      "Desenvolvedoras      (DIM_DEV):   75,469 registros\n",
-      "Publicadoras         (DIM_PBS):   62,672 registros\n",
-      "Categorias           (DIM_CAT):       58 registros\n",
-      "Gêneros              (DIM_GEN):       33 registros\n",
-      "Tags                 (DIM_TAG):      452 registros\n",
-      "Fato Games           (FAT_JGO):  122,610 registros\n",
+      "⚠ Erro na validação: (psycopg2.errors.UndefinedTable) relation \"DIM_OFR\" does not exist\n",
+      "LINE 1: SELECT COUNT(*) as total FROM \"DIM_OFR\"\n",
+      "                                      ^\n",
       "\n",
-      "--- Amostra da Tabela Fato (FAT_JGO) ---\n",
-      " SRK_JGO                               NME_JGO  VLR_IDD  NTA_MTC  NTA_USR  ANO_LNC\n",
-      " 2539430            Black Dragon Mage Playtest        0        0        0     2023\n",
-      "  496350 Supipara - Chapter 1 Spring Has Come!        0        0        0     2016\n",
-      " 1034400     Mystery Solitaire The Black Raven        0        0        0     2019\n",
-      " 3292190           버튜버 파라노이아 - Vtuber Paranoia        0        0        0     2024\n",
-      " 3631080                         Maze Quest VR        0        0        0     2025\n",
-      "\n",
-      "✓ Validação concluída com sucesso!\n"
+      "[SQL: SELECT COUNT(*) as total FROM \"DIM_OFR\"]\n",
+      "(Background on this error at: https://sqlalche.me/e/20/f405)\n"
      ]
     }
    ],
@@ -608,7 +547,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -622,7 +561,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
